--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+*,
+*::after,
+*::before{
+    margin: 0;
+    padding: 0
+}
 .container {
+    display: inline-block;
     position: relative;
-    width: 30%;
-    height: auto;
-    margin: auto;
+    width: 45%;
+    padding: 10px;
+    height: 100%;
 }
 img{
     display: flex;
@@ -14,12 +21,15 @@ span{
     display: block;
     width: 50px;
     height: 50px;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #000;
     text-align: center;
     line-height: 50px;
-    border-radius: 0 50% 50% ;
+    border-radius: 0 50% 50% 50%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 15px;
+    left: 15px;
+}
+p {
+    margin: 10px;
 }
