--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ span{
     top: 15px;
     left: 15px;
 }
-p {
-    margin: 10px;
+h1 {
+    margin: 0;
+    text-align: center;
+    background-color: #000;
+    padding: 10px;
+    color: #fff
 }
