--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 .container {
     display: inline-block;
     position: relative;
-    width: 45%;
+    width: 35%;
     padding: 10px;
     height: 100%;
 }
 img{
-    display: flex;
+    display: inline-block;
     width: 100%;
     height: 100%;
     margin: auto
